Added flow for uploading a file, extracting data from it, and saving the data

--- a/src/app/components/main-view/main-page/main-page.component.html
+++ b/src/app/components/main-view/main-page/main-page.component.html
@@ -9,7 +9,7 @@
       <div *ngFor="let inputField of inputFields">
 
         <label for="{{inputField.name}}">{{inputField.label}}</label>
-        <input type="{{inputField.type}}" name="{{inputField.name}}" [(ngModel)]="inputField.value" [required] = "inputField.required">
+        <input type="{{inputField.type}}" name="{{inputField.name}}" [(ngModel)]="inputField.value" [required] = "inputField.required" id="{{inputField.id}}">
         <button (click)="removeFieldFromInputFields(inputField)">(X)</button>
 
       </div>
@@ -17,14 +17,14 @@
       <div *ngFor="let itemInputField of itemInputFields">
 
         <label for="{{itemInputField.nameName}}">{{itemInputField.label}}</label>
-        <input type="{{itemInputField.nameType}}" name="{{itemInputField.nameName}}" [(ngModel)]="itemInputField.nameValue" [required] = "itemInputField.nameRequired">
-        <input type="{{itemInputField.priceType}}" name="{{itemInputField.priceName}}" [(ngModel)]="itemInputField.priceValue" [required] = "itemInputField.priceRequired">
+        <input type="{{itemInputField.nameType}}" name="{{itemInputField.nameName}}" [(ngModel)]="itemInputField.nameValue" [required] = "itemInputField.nameRequired" id="{{itemInputField.nameId}}">
+        <input type="{{itemInputField.priceType}}" name="{{itemInputField.priceName}}" [(ngModel)]="itemInputField.priceValue" [required] = "itemInputField.priceRequired" id="{{itemInputField.priceId}}">
         <button (click)="removeItemFieldFromInputFields(itemInputField)">(X)</button>
 
       </div>
 
       <button type="submit" [disabled]="!myForm.valid">Submit</button>
-      <button (click)="addFieldFromButton()">Add Field</button>
+      <button (click)="addFieldFromButton($event)">Add Field</button>
     </form>
   </body>
 
