Added initial main page

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -10,7 +10,7 @@
 
   <div class="loading-spinner" *ngIf="isLoading">
     <app-loading-spinner-login></app-loading-spinner-login>
-    <p class="logging-text">Logging in...</p>
+    <p class="logging-text">Logging In...</p>
   </div>
 
     <form [formGroup]="loginForm" (submit)="onSubmit(loginForm)" action="" method="post" class="form-login text-center"
