--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,9 +2,9 @@
 
 <html lang="en">
   <body class="body" class="d-flex flex-column">
-  <header>
+  <header class="p-2">
     <img class="logo-img" src="../../../assets/images/small-logo.png" alt="small-logo.png">
-    <h1>Personal Finance Manager</h1>
+    <h3>Personal Finance Manager</h3>
     <p>Your smart solution for <strong>managing your personal finances!</strong></p>
   </header>
 
