--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,5 +1,5 @@
 body {
-  background: radial-gradient(#C47AFF 25%, #00a1f2 75%);
+  background: radial-gradient(#C47AFF 25%, #00A1F2 75%);
 }
 
 header {
@@ -10,8 +10,8 @@ header {
 
 header img {
   float: left;
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
 }
 
 .form-login, .form-register, .form-update-account {
