--- a/src/app/components/main-view/main-page/main-page.component.html
+++ b/src/app/components/main-view/main-page/main-page.component.html
@@ -2,12 +2,7 @@
 
 <html lang="en">
 
-  <header class="mb-5 p-2">
-    <img class="logo-img" src="../../../../assets/images/small-logo.png" alt="small-logo.png">
-    <h3>Personal Finance Manager</h3>
-    <p>Your smart solution for <strong>managing your personal finances!</strong></p>
-  </header>
-
+  <br><br>
   <div class="row row-cols-1 row-cols-md-3 g-4 mx-4">
     <div class="col">
       <div class="card text-center rounded-5 p-3 shadow-lg">
@@ -17,7 +12,7 @@
           <p class="card-text">You can either insert the receipt data manually, or upload an image and have its data extracted by Optical Character Recognition (OCR).</p>
           <div class="btn-group-vertical">
             <a href="#" class="btn btn-primary btn-lg mb-2" role="button">Manual Insertion</a>
-            <a routerLink="../file-upload" class="btn btn-primary btn-lg mt-2 mb-2" role="button">OCR Data Extraction</a>
+            <a routerLink="../file-upload" class="btn btn-primary btn-lg mt-2 mb-2 " role="button">OCR Data Extraction</a>
             <a href="#" class="btn btn-primary btn-lg mt-2" role="button">Manage Receipts</a>
           </div>
           <p class="card-text"><small class="text-muted"></small></p>
@@ -47,7 +42,7 @@
         <img class="card-img-top rounded-5" src="../../../../assets/images/altele.jpg" alt="Other Expenses">
         <div class="card-body">
           <h3 class="card-title"><strong>Others</strong></h3>
-          <p class="card-text">You can also choose to keep track of other expenses, such as fuel, rent, travels expenses and others.</p>
+          <p class="card-text">You can also choose to keep track of other expenses, such as fuel, rent, travel expenses and others.</p>
           <div class="btn-group-vertical mt-3 mb-5">
             <a href="#" class="btn btn-primary btn-lg mb-2" role="button">Add New Expense</a>
             <a href="#" class="btn btn-primary btn-lg mt-2" role="button">Manage Expenses</a>
