--- a/src/app/components/main-view/receipt-form/receipt-form.component.html
+++ b/src/app/components/main-view/receipt-form/receipt-form.component.html
@@ -44,7 +44,7 @@
       </div>
 
       <button class="btn btn-primary mx-2 mb-4" [disabled]="!myForm.valid" type="submit">Submit</button>
-      <button class="btn btn-primary mx-2 mb-4" (click)="addFieldFromButton($event)">Add Field</button>
+      <button class="btn btn-primary mx-2 mb-4" (click)="addItemFieldFromButton($event)">Add Field</button>
     </form>
   </body>
 
