--- a/src/app/components/main-view/main-page/main-page.component.html
+++ b/src/app/components/main-view/main-page/main-page.component.html
@@ -11,7 +11,7 @@
           <h3 class="card-title"><strong>Receipts</strong></h3>
           <p class="card-text">You can either insert the receipt data manually, or upload an image and have its data extracted by Optical Character Recognition (OCR).</p>
           <div class="btn-group-vertical">
-            <a href="#" class="btn btn-primary btn-lg mb-2" role="button">Manual Insertion</a>
+            <a routerLink="../receipt-form" class="btn btn-primary btn-lg mb-2" role="button">Manual Insertion</a>
             <a routerLink="../file-upload" class="btn btn-primary btn-lg mt-2 mb-2 " role="button">OCR Data Extraction</a>
             <a href="#" class="btn btn-primary btn-lg mt-2" role="button">Manage Receipts</a>
           </div>
