--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,13 +15,13 @@
 
     <form [formGroup]="loginForm" (submit)="onSubmit(loginForm)" action="" method="post" class="form-login text-center"
           *ngIf="!isLoading">
-      <div class="form-group"></div>
+      <div class="form-group shadow-lg"></div>
       <h2 style="color: white">Login</h2>
       <div class="form-floating mb-3">
         <input type="email" class="form-control" id="input-email-address" name="input-email-address"
                placeholder="Enter your email address..." formControlName="emailAddress">
 
-        <label for="input-email-address" class="form-label">Email address</label>
+        <label for="input-email-address" class="form-label">Email Address</label>
         <div id="email-tooltip"></div>
         <small class="error-message"
                *ngIf="showEmailAddressError">
@@ -45,7 +45,7 @@
       </div>
       <hr style="color: white">
 
-      <button type="submit" class="btn btn-primary w-100 mb-2" id="login-button">Login</button>
+      <button type="submit" class="btn btn-primary btn-lg w-100 mb-2" id="login-button">Login</button>
 
       <a class="btn btn-secondary w-100 mb-2" role="button" id="register-button" (click)="createAccount()">Create an account</a>
 
