--- a/src/app/components/main-view/receipt-form/receipt-form.component.html
+++ b/src/app/components/main-view/receipt-form/receipt-form.component.html
@@ -2,7 +2,7 @@
 
 <html>
 
-  <body class="body" class="d-flex flex-column">
+  <body class="body d-flex flex-column">
 
     <form class="mx-3 mt-3 d-flex flex-column" (ngSubmit)="onSubmit()" #myForm="ngForm">
 
