--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -8,7 +8,7 @@
 
   <body class="d-flex flex-column">
 
-    <header>
+    <header class="p-2">
       <img src="assets/images/small-logo.png" alt="small-logo.png">
       <h1>RecycleIT</h1>
       <p>Create an account and make your way towards <strong>helping the planet!</strong></p>
