--- a/src/app/components/register/register-dialog/register-dialog.component.html
+++ b/src/app/components/register/register-dialog/register-dialog.component.html
@@ -4,7 +4,7 @@
 
   <body class="dialog-body">
 
-    <h1 mat-dialog-title>Your account has been successfully created!</h1>
+    <h1 mat-dialog-title>{{data.message}}</h1>
 
     <div mat-dialog-content class="dialog-content">
 
