--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -1,5 +1,6 @@
 html, body {
   height: 100%;
+  background-color: #ECF2F9;
 }
 
 header {
@@ -10,8 +11,8 @@ header {
 
 header img {
   float: left;
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
 }
 
 .form-login, .form-register, .form-update-account {
