--- a/src/app/components/main-view/file-upload/file-upload.component.html
+++ b/src/app/components/main-view/file-upload/file-upload.component.html
@@ -21,6 +21,6 @@
     </button>
   </div>
 
-  <button (click)="uploadFile()" *ngIf="!isLoading">Upload Image</button>
+  <button class="btn btn-primary mx-2 my-3" (click)="uploadFile()" *ngIf="!isLoading">Upload Image</button>
 
 </html>
