--- a/src/app/components/main-view/main-page/main-page.component.html
+++ b/src/app/components/main-view/main-page/main-page.component.html
@@ -13,7 +13,7 @@
           <div class="btn-group-vertical">
             <a routerLink="../receipt-form" class="btn btn-primary btn-lg mb-2" role="button">Manual Insertion</a>
             <a routerLink="../file-upload" class="btn btn-primary btn-lg mt-2 mb-2 " role="button">OCR Data Extraction</a>
-            <a href="#" class="btn btn-primary btn-lg mt-2" role="button">Manage Receipts</a>
+            <a routerLink="../manage-receipts" class="btn btn-primary btn-lg mt-2" role="button">Manage Receipts</a>
           </div>
           <p class="card-text"><small class="text-muted"></small></p>
         </div>
